# src/main/java/au/com/mountainpass/inflector/springboot/controllers/AcceptRouter.java
@@ -8,10 +8,10 @@ import javax.ws.rs.core.MediaType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
 import io.swagger.inflector.models.RequestContext;
+import io.swagger.inflector.models.ResponseContext;
 
 @Controller
 public class AcceptRouter implements RyvrController {
@@ -23,13 +23,13 @@ public class AcceptRouter implements RyvrController {
     NotAcceptableController notAcceptableController = new NotAcceptableController();
 
     @Override
-    public ResponseEntity<?> getApiDocs(
+    public ResponseContext getApiDocs(
             io.swagger.inflector.models.RequestContext request, String group) {
         return findContentController(request.getAcceptableMediaTypes())
                 .getApiDocs(request, group);
     }
 
-    private RyvrContentController findContentController(
+    private RyvrController findContentController(
             List<MediaType> accepableTypes) {
         for (MediaType type : accepableTypes) {
             Optional<RyvrContentController> compatibleController = controllers
@@ -43,21 +43,21 @@ public class AcceptRouter implements RyvrController {
     }
 
     @Override
-    public ResponseEntity<?> getRvyrsCollection(RequestContext request,
-            Long page, String xRequestId, String accept, String cacheControl) {
+    public ResponseContext getRyvrsCollection(RequestContext request, Long page,
+            String xRequestId, String accept, String cacheControl) {
         return findContentController(request.getAcceptableMediaTypes())
-                .getRvyrsCollection(request, page, xRequestId, accept,
+                .getRyvrsCollection(request, page, xRequestId, accept,
                         cacheControl);
     }
 
     @Override
-    public ResponseEntity<?> getRoot(RequestContext request) {
+    public ResponseContext getRoot(RequestContext request) {
         return findContentController(request.getAcceptableMediaTypes())
                 .getRoot(request);
     }
 
     @Override
-    public ResponseEntity<?> getRyvr(RequestContext request, String ryvrName,
+    public ResponseContext getRyvr(RequestContext request, String ryvrName,
             String xRequestId, String accept, String cacheControl) {
         return findContentController(request.getAcceptableMediaTypes())
                 .getRyvr(request, ryvrName, xRequestId, accept, cacheControl);
