# src/main/java/au/com/mountainpass/inflector/springboot/controllers/NotAcceptableController.java
@@ -1,47 +1,36 @@
 package au.com.mountainpass.inflector.springboot.controllers;
 
-import javax.ws.rs.core.MediaType;
-
-import org.springframework.core.Ordered;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import io.swagger.inflector.models.RequestContext;
+import io.swagger.inflector.models.ResponseContext;
 
-public class NotAcceptableController implements RyvrContentController {
+public class NotAcceptableController implements RyvrController {
 
     @Override
-    public ResponseEntity<?> getApiDocs(RequestContext request, String group) {
+    public ResponseContext getApiDocs(RequestContext request, String group) {
         return notAcceptable();
     }
 
     @Override
-    public boolean isCompatible(MediaType type) {
-        return true;
-    }
-
-    @Override
-    public int getOrder() {
-        return Ordered.LOWEST_PRECEDENCE;
-    }
-
-    @Override
-    public ResponseEntity<?> getRvyrsCollection(RequestContext request,
-            Long page, String xRequestId, String accept, String cacheControl) {
+    public ResponseContext getRyvrsCollection(RequestContext request, Long page,
+            String xRequestId, String accept, String cacheControl) {
         return notAcceptable();
     }
 
-    private ResponseEntity<?> notAcceptable() {
-        return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).build();
+    private ResponseContext notAcceptable() {
+        return MainRyvrController.toResponseContext(
+                ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).build());
     }
 
     @Override
-    public ResponseEntity<?> getRoot(RequestContext request) {
+    public ResponseContext getRoot(RequestContext request) {
         return notAcceptable();
     }
 
     @Override
-    public ResponseEntity<?> getRyvr(RequestContext request, String ryvrName,
+    public ResponseContext getRyvr(RequestContext request, String ryvrName,
             String xRequestId, String accept, String cacheControl) {
         return notAcceptable();
     }
