# src/main/java/au/com/mountainpass/inflector/springboot/controllers/RyvrController.java
@@ -1,19 +1,18 @@
 package au.com.mountainpass.inflector.springboot.controllers;
 
-import org.springframework.http.ResponseEntity;
-
 import io.swagger.inflector.models.RequestContext;
+import io.swagger.inflector.models.ResponseContext;
 
 public interface RyvrController {
 
-    public ResponseEntity<?> getApiDocs(RequestContext request, String group);
+    public ResponseContext getApiDocs(RequestContext request, String group);
 
-    public ResponseEntity<?> getRvyrsCollection(RequestContext request,
-            Long page, String xRequestId, String accept, String cacheControl);
+    public ResponseContext getRyvrsCollection(RequestContext request, Long page,
+            String xRequestId, String accept, String cacheControl);
 
-    public ResponseEntity<?> getRoot(RequestContext request);
+    public ResponseContext getRoot(RequestContext request);
 
-    public ResponseEntity<?> getRyvr(RequestContext request, String ryvrName,
+    public ResponseContext getRyvr(RequestContext request, String ryvrName,
             String xRequestId, String accept, String cacheControl);
 
 }
